crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__public_jwk_shape.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: result
---
kty: OKP
crv: Ed25519
alg: EdDSA
use_: sig
kid_len: 16
x_len: 43
has_d: false
