crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__snapshot_ed25519_private_pem_structure.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: redacted
---
-----BEGIN PRIVATE KEY-----
[REDACTED]
[REDACTED]
-----END PRIVATE KEY-----
