crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__snapshot_ed25519_public_pem_structure.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: redacted
---
-----BEGIN PUBLIC KEY-----
[REDACTED]
-----END PUBLIC KEY-----
