crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__tempfile_shape.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: result
---
private_tempfile_matches_pem: true
public_tempfile_matches_pem: true
